@startuml

class Tienda {
    -vector<Cliente> clientes
    +static Tienda* getInstance()
    +static bool deleteInstance()
    +void readFromFile()
    +void printClients()
    +void contactarTodos()
}

class Cliente {
    -string id
    -string cus_name
    -string cus_last
    -string type_comm
    -string mail
    -string phone_num
    -string calle
    -string numero
    -string colonia
    +void contactar()
    +void print()
    +virtual Caller* factoryMethod(string) = 0
    +void addClient(string params)
}

class ccEmail {
    +void contact()
    -Receiver *r
}

class ccTelefono {
    +void contact()
    -Receiver *r
}

class ccSMS {
    +void contact()
    -Receiver *r
}

class Caller {
   +void setCommand()
   +void executeAction()
   -Command *command
}
class Receiver {
    +void enviaEmail()
    +void enviaSMS()
    +void llamaTelefono()
}

class ConcreteCreator{
    +Caller* factoryMethod(string type_comm)
}

class Command {
    +virtual void execute()
}

Command <|-- ccTelefono
Command <|-- ccSMS
Command <|-- ccEmail
Receiver <-- Cliente
ccTelefono <-- Cliente
ccSMS <-- Cliente
ccEmail <-- Cliente
Command <--* Caller
Receiver <-- ccTelefono
Receiver <-- ccEmail
Receiver <-- ccSMS
Cliente <-- Tienda
Cliente <|-- ConcreteCreator

@enduml